<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/atras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:id="@+id/flecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.8dp"
            app:srcCompat="@drawable/ic_flecha" />

        <TextView
            android:id="@+id/rc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textStyle="bold"
            android:text="@string/is"
            android:textSize="18dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="204dp"
        android:layout_height="175dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atras"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/ic_sph2_1" />


    <TextView
        android:id="@+id/ic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rclave"
        android:gravity="left"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/rcc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rcc"
        android:gravity="left"
        android:textSize="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/ic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintVertical_bias="0.058"
        app:layout_constraintTop_toBottomOf="@+id/rcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableEnd="@drawable/people"
        />

    <Button
        android:id="@+id/rcr"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/recuperar"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>