<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="204dp"
        android:layout_height="175dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        app:srcCompat="@drawable/ic_sph2_1" />

    <TextView
        android:id="@+id/is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toBottomOf="@+id/is"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableEnd="@drawable/people"
        />


    <EditText
        android:id="@+id/clave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:inputType="textPassword"
        android:hint="@string/clave"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ojo"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ToggleButton
        android:id="@+id/ojo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ojo"
        android:layout_marginRight="30dp"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clave"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:layout_constraintBottom_toTopOf="@+id/rc"
        />
    <TextView
        android:id="@+id/rc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="30dp"
        android:text="@string/rc"
        android:gravity="end"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintTop_toBottomOf="@+id/clave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/rc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/cc"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/cc"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gmail"
        android:layout_marginStart="90dp"
        app:layout_constraintTop_toBottomOf="@+id/cc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fk"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/fk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/facebook"
        app:layout_constraintTop_toBottomOf="@+id/cc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tw"
        app:layout_constraintStart_toEndOf="@+id/gl"/>

    <ImageView
        android:id="@+id/tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/twitter"
        android:layout_marginEnd="90dp"
        app:layout_constraintTop_toBottomOf="@+id/cc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fk"/>

</androidx.constraintlayout.widget.ConstraintLayout>